--- a/cv_operations.ipynb
+++ b/cv_operations.ipynb
@@ -9,21 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import cv2\n",
     "import math\n",
     "import skimage\n",
-    "import skimage.data\n",
-    "import skimage.morphology\n",
+    "import imageio\n",
+    "\n",
     "import skimage.filters as skfilters\n",
-    "from skimage.viewer import ImageViewer\n",
-    "from skimage import exposure\n",
-    "from skimage.morphology import disk, dilation\n",
-    "from skimage.filters.rank import mean\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from scipy import ndimage\n",
     "from scipy.signal import convolve2d\n",
@@ -40,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,18 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-111-171dff59ae58>, line 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-111-171dff59ae58>\"\u001b[1;36m, line \u001b[1;32m18\u001b[0m\n\u001b[1;33m    m2 = (rad**2 >  (maxxy-0.5)**2 + (minxy+0.5)**2).*(minxy+0.5) + (rad**2 <= (maxxy-0.5)**2 + (minxy+0.5)**2).* sqrt(rad**2 - (maxxy - 0.5)**2)\u001b[0m\n\u001b[1;37m                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define fucntion fspecial(shape = disk)\n",
     "def fspecial_disk(radius):\n",
@@ -105,67 +92,90 @@
     "    y = np.arange(-crad, crad + 1)\n",
     "    xx,yy = np.meshgrid(x, y, sparse = True)\n",
     "    \n",
-    "    print(xx)\n",
-    "    print(yy)\n",
+    "\n",
     "\n",
     "    maxxy = np.maximum(np.absolute(xx),np.absolute(yy))\n",
     "    minxy = np.minimum(np.absolute(xx),np.absolute(yy))\n",
-    "    print(maxxy)\n",
-    "    print(minxy)\n",
-    "    \n",
-    "    m1 = (rad**2 <  (maxxy+0.5)**2 + (minxy-0.5)**2)*(minxy-0.5) + (rad**2 >= (maxxy+0.5)**2 + (minxy-0.5)**2)*sqrt(rad**2 - (maxxy + 0.5)**2)\n",
-    "    m2 = (rad**2 >  (maxxy-0.5)**2 + (minxy+0.5)**2)*(minxy+0.5) + (rad**2 <= (maxxy-0.5)**2 + (minxy+0.5)**2)*sqrt(rad**2 - (maxxy - 0.5)**2)\n",
-    "#     mask = disk(radius)\n",
     "\n",
-    "#     kernel = np.zeros(((int)(2*radius+1), (int)(2*radius+1)))\n",
-    "#     y, x = np.ogrid[-radius:radius+1, -radius:radius+1]\n",
-    "#     mask = x**2 + y**2 <= radius**2\n",
-    "#     kernel[mask] = 1                \n",
+    "    a = (rad**2 <  (maxxy+0.5)**2 + (minxy-0.5)**2) \n",
+    "    b = (rad**2 >= (maxxy+0.5)**2 + (minxy-0.5)**2) \n",
     "    \n",
-    "#     disk = disk[:, :, None]\n",
-    "#     misc.imsave(examples_path + 'distorted_lblur_mask' + str(radius) + '.bmp', mask)\n",
-    "#     print(mask)\n",
-    "#     return mask\n",
+    "\n",
+    "    \n",
+    "    m1 = (a * 1 * (minxy-0.5) + b * 1 *np.sqrt((rad**2 - np.square(maxxy + 0.5)).astype(complex))).real\n",
+    "    a1 = (rad**2 >  (maxxy-0.5)**2 + (minxy+0.5)**2)\n",
+    "    b1 = (rad**2 <= (maxxy-0.5)**2 + (minxy+0.5)**2)\n",
+    "    m2 = (a1 * 1 * (minxy+0.5) + b1 * 1 * np.sqrt((rad**2 - np.square(maxxy - 0.5)).astype(complex))).real\n",
+    "\n",
+    "    \n",
+    "    aa = (rad**2 <  (maxxy+0.5)**2 + (minxy+0.5)**2) \n",
+    "    bb = (rad**2 >= (maxxy-0.5)**2 + (minxy-0.5)**2)\n",
+    "#     sgrid = (rad^2*(0.5*(asin(m2/rad) - asin(m1/rad)) + ...\n",
+    "#             0.25*(sin(2*asin(m2/rad)) - sin(2*asin(m1/rad)))) - ...\n",
+    "#             (maxxy-0.5).*(m2-m1) + (m1-minxy+0.5)) ...\n",
+    "#             .*((((rad^2 < (maxxy+0.5).^2 + (minxy+0.5).^2) & ...\n",
+    "#             (rad^2 > (maxxy-0.5).^2 + (minxy-0.5).^2)) | ...\n",
+    "#             ((minxy==0)&(maxxy-0.5 < rad)&(maxxy+0.5>=rad))));\n",
+    "    f1 = (0.5*(np.arcsin(m2/rad) - np.arcsin(m1/rad)) + 0.25*(np.sin(2*np.arcsin(m2/rad)) - np.sin(2*np.arcsin(m1/rad))))\n",
+    "    first = (rad**2*f1 - (maxxy-0.5)*(m2-m1) + (m1-minxy+0.5))\n",
+    "    second = (((aa & bb) | ((minxy==0)&(maxxy-0.5 < rad)&(maxxy+0.5>=rad))))\n",
+    "\n",
+    "    sgrid = second * 1 * first\n",
+    "    \n",
+    "    aa1 = (rad**2 >  (maxxy+0.5)**2 + (minxy+0.5)**2)\n",
+    "\n",
+    "    sgrid = sgrid + aa1 * 1    \n",
+    "    sgrid[crad,crad] = min(np.pi*rad**2,np.pi/2);\n",
+    "    \n",
+    "    \n",
+    "    if ((crad>0) and (rad > crad-0.5) and (rad**2 < (crad-0.5)**2+0.25)):\n",
+    "        \n",
+    "        m1  = sqrt(rad**2 - (crad - 0.5)**2)\n",
+    "        m1n = m1/rad\n",
+    "        sg0 = 2*(rad**2*(0.5*np.arcsin(m1n) + 0.25*np.sin(2*np.arcsin(m1n)))-m1*(crad-0.5))\n",
+    "        sgrid[2*crad,crad]     = sg0\n",
+    "        sgrid[crad,2*crad]     = sg0\n",
+    "        sgrid[crad,0]          = sg0\n",
+    "        sgrid[0,crad]          = sg0\n",
+    "        sgrid[2*crad-1,crad]   = sgrid(2*crad-1,crad) - sg0\n",
+    "        sgrid[crad,2*crad-1]   = sgrid(crad,2*crad-1) - sg0\n",
+    "        sgrid[crad,1]          = sgrid(crad,1)        - sg0\n",
+    "        sgrid[1,crad]          = sgrid(1,crad)        - sg0\n",
+    "    \n",
+    "    \n",
+    "    sgrid[crad,crad] = min(sgrid[crad,crad],1);\n",
+    "    \n",
+    "    h = sgrid/np.sum(sgrid);\n",
+    "    return h\n",
+    "\n",
+    "\n",
     "    \n",
     "def imblurlens(image, r):\n",
     "    \n",
     "    disk = fspecial_disk(r)\n",
     "    ims = []\n",
     "    for d in range(3):\n",
-    "#         im_conv_d = mean(image[:,:,d], disk)\n",
-    "        im_conv_d = ndimage.filters.convolve(image[:,:,d], disk, mode='nearest')\n",
+    "        im_conv_d = convolve2d(image[:,:,d], disk, mode='same', boundary='fill')\n",
+    "        \n",
     "        ims.append(im_conv_d)\n",
     "\n",
-    "    im_conv = np.stack(ims, axis=2).astype(\"uint8\")\n",
+    "    im_conv = np.stack(ims, axis=2).astype(\"float64\")\n",
     "\n",
     "    return im_conv\n",
     "\n",
-    "#     blur = ndimage.correlate(image, disk, mode='nearest').transpose()\n",
-    "#     blur = ndimage.filters.convolve(image, disk, mode='nearest')\n",
-    "#     return blur\n",
-    "    \n"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\FIGARO\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:24: DeprecationWarning: `imread` is deprecated!\n",
-      "`imread` is deprecated in SciPy 1.0.0.\n",
-      "Use ``matplotlib.pyplot.imread`` instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read images names\n",
     "basepath = 'ref_img/'\n",
     "examples_path = 'results1/'\n",
-    "examples_path1 = 'results_scipy/'\n",
+    "\n",
     "# read and display original image\n",
     "image = skimage.io.imread(fname=basepath + 'I01.BMP')\n",
     "\n",
@@ -177,21 +187,15 @@
     "if not os.path.exists(examples_path):\n",
     "    # if not exist, make directory\n",
     "    os.makedirs(examples_path)\n",
-    "    \n",
-    "if not os.path.exists(examples_path1):\n",
-    "    # if not exist, make directory\n",
-    "    os.makedirs(examples_path1)\n",
-    "    \n",
-    "    \n",
-    "skimage.io.imsave(examples_path + 'distorted_gblur_equ' + '.bmp', image)\n",
     "\n",
-    "im = ndimage.imread(basepath + 'I01.BMP')\n",
+    "im = plt.imread(basepath + 'I01.BMP')\n",
+    "# im = ndimage.imread(basepath + 'I01.BMP')\n",
     "im = mapmm(im)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,66 +205,9 @@
     "for i in range(len(levels)):\n",
     "    distort_I = imblurgauss(image, levels[i]);\n",
     "    distort_I = mapmm(distort_I)\n",
-    "    skimage.io.imsave(examples_path + 'distorted_gblur_' + str(i+1) + '.bmp', distort_I)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# levels = [0.1, 0.2, 0.5, 0.7, 1, 1.5, 2, 3, 5]\n",
-    "# for i in range(len(levels)):\n",
-    "#     im1 = ndimage.gaussian_filter(im, sigma=levels[i], truncate=2.0, mode='nearest')\n",
-    "#     misc.imsave(examples_path1 + 'distorted_gblur_' + str(i+1) + '.bmp', im1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-1  0  1]]\n",
-      "[[-1]\n",
-      " [ 0]\n",
-      " [ 1]]\n",
-      "[[1 1 1]\n",
-      " [1 0 1]\n",
-      " [1 1 1]]\n",
-      "[[1 0 1]\n",
-      " [0 0 0]\n",
-      " [1 0 1]]\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "filter weights array has incorrect shape.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-110-cbebca1d2e77>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mlevels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlevels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mdistort_I\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimblurlens\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mim\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mdistort_I\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmapmm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdistort_I\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mmisc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimsave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexamples_path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'distorted_lblur_'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'.bmp'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdistort_I\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-106-489482d11f36>\u001b[0m in \u001b[0;36mimblurlens\u001b[1;34m(image, r)\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;31m#         im_conv_d = mean(image[:,:,d], disk)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m         \u001b[0mim_conv_d\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mndimage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilters\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconvolve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'nearest'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m         \u001b[0mims\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mim_conv_d\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\scipy\\ndimage\\filters.py\u001b[0m in \u001b[0;36mconvolve\u001b[1;34m(input, weights, output, mode, cval, origin)\u001b[0m\n\u001b[0;32m    743\u001b[0m     \"\"\"\n\u001b[0;32m    744\u001b[0m     return _correlate_or_convolve(input, weights, output, mode, cval,\n\u001b[1;32m--> 745\u001b[1;33m                                   origin, True)\n\u001b[0m\u001b[0;32m    746\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    747\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\scipy\\ndimage\\filters.py\u001b[0m in \u001b[0;36m_correlate_or_convolve\u001b[1;34m(input, weights, output, mode, cval, origin, convolution)\u001b[0m\n\u001b[0;32m    593\u001b[0m     \u001b[0mwshape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mii\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mii\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mii\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    594\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwshape\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 595\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'filter weights array has incorrect shape.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    596\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mconvolution\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    597\u001b[0m         \u001b[0mweights\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mslice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: filter weights array has incorrect shape."
-     ]
-    }
-   ],
-   "source": [
-    "# #2 lens blur\n",
-    "levels = [1, 1.5, 2, 3, 4, 5, 6, 7, 8]\n",
-    "for i in range(len(levels)):\n",
-    "    distort_I = imblurlens(im, levels[i])\n",
-    "    distort_I = mapmm(distort_I)\n",
-    "    misc.imsave(examples_path + 'distorted_lblur_' + str(i+1) + '.bmp', distort_I)\n",
-    "#     skimage.io.imsave(examples_path + 'distorted_lblur_' + str(i+1) + '.bmp', distort_I)\n",
-    "\n"
+    "#     data = 255 * distort_I\n",
+    "#     distort_I = data.astype(np.uint8)\n",
+    "    imageio.imwrite(examples_path + 'distorted_gblur_' + str(i+1) + '.bmp', distort_I)"
    ]
   },
   {
@@ -268,7 +215,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# #2 lens blur\n",
+    "levels = [0.5, 1, 1.5, 2, 3, 4, 5, 6, 7, 8]\n",
+    "for i in range(len(levels)):\n",
+    "    distort_I = imblurlens(im, levels[i])\n",
+    "    distort_I = mapmm(distort_I)\n",
+    "#     data = 255 * distort_I\n",
+    "#     distort_I = data.astype(np.uint8)\n",
+    "    imageio.imwrite(examples_path + 'distorted_lblur_' + str(i+1) + '.bmp', distort_I)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
