refine 2nd function imblurlens

--- a/cv_operations.ipynb
+++ b/cv_operations.ipynb
@@ -98,18 +98,16 @@
     "    minxy = np.minimum(np.absolute(xx),np.absolute(yy))\n",
     "\n",
     "    a = (rad**2 <  (maxxy+0.5)**2 + (minxy-0.5)**2) \n",
-    "    b = (rad**2 >= (maxxy+0.5)**2 + (minxy-0.5)**2) \n",
-    "    \n",
-    "\n",
-    "    \n",
+    "    b = (rad**2 >= (maxxy+0.5)**2 + (minxy-0.5)**2)    \n",
     "    m1 = (a * 1 * (minxy-0.5) + b * 1 *np.sqrt((rad**2 - np.square(maxxy + 0.5)).astype(complex))).real\n",
+    "    \n",
     "    a1 = (rad**2 >  (maxxy-0.5)**2 + (minxy+0.5)**2)\n",
-    "    b1 = (rad**2 <= (maxxy-0.5)**2 + (minxy+0.5)**2)\n",
+    "    b1 = (rad**2 <= (maxxy-0.5)**2 + (minxy+0.5)**2)    \n",
     "    m2 = (a1 * 1 * (minxy+0.5) + b1 * 1 * np.sqrt((rad**2 - np.square(maxxy - 0.5)).astype(complex))).real\n",
     "\n",
     "    \n",
-    "    aa = (rad**2 <  (maxxy+0.5)**2 + (minxy+0.5)**2) \n",
-    "    bb = (rad**2 >= (maxxy-0.5)**2 + (minxy-0.5)**2)\n",
+    "    a2 = (rad**2 <  (maxxy+0.5)**2 + (minxy+0.5)**2) \n",
+    "    b2 = (rad**2 >= (maxxy-0.5)**2 + (minxy-0.5)**2)\n",
     "#     sgrid = (rad^2*(0.5*(asin(m2/rad) - asin(m1/rad)) + ...\n",
     "#             0.25*(sin(2*asin(m2/rad)) - sin(2*asin(m1/rad)))) - ...\n",
     "#             (maxxy-0.5).*(m2-m1) + (m1-minxy+0.5)) ...\n",
@@ -118,13 +116,13 @@
     "#             ((minxy==0)&(maxxy-0.5 < rad)&(maxxy+0.5>=rad))));\n",
     "    f1 = (0.5*(np.arcsin(m2/rad) - np.arcsin(m1/rad)) + 0.25*(np.sin(2*np.arcsin(m2/rad)) - np.sin(2*np.arcsin(m1/rad))))\n",
     "    first = (rad**2*f1 - (maxxy-0.5)*(m2-m1) + (m1-minxy+0.5))\n",
-    "    second = (((aa & bb) | ((minxy==0)&(maxxy-0.5 < rad)&(maxxy+0.5>=rad))))\n",
+    "    second = (((a2 & b2) | ((minxy==0)&(maxxy-0.5 < rad)&(maxxy+0.5>=rad))))\n",
     "\n",
     "    sgrid = second * 1 * first\n",
     "    \n",
-    "    aa1 = (rad**2 >  (maxxy+0.5)**2 + (minxy+0.5)**2)\n",
+    "    a3 = (rad**2 >  (maxxy+0.5)**2 + (minxy+0.5)**2)\n",
     "\n",
-    "    sgrid = sgrid + aa1 * 1    \n",
+    "    sgrid = sgrid + a3 * 1    \n",
     "    sgrid[crad,crad] = min(np.pi*rad**2,np.pi/2);\n",
     "    \n",
     "    \n",
