define disk filter in fspecial module

--- a/cv_operations.ipynb
+++ b/cv_operations.ipynb
@@ -3,13 +3,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
     "Import the library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,19 +25,22 @@
     "from scipy import ndimage\n",
     "from scipy.signal import convolve2d\n",
     "from scipy import misc\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import fspecial"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
     "define function mapmm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +60,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
     "1: define functioin imblurgauss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,83 +79,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
     "2: define function imblurlens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define fucntion fspecial(shape = disk)\n",
-    "def fspecial_disk(radius):\n",
-    "    rad   = radius\n",
-    "    crad  = math.ceil(rad-0.5)\n",
-    "    x = np.arange(-crad, crad + 1)\n",
-    "    y = np.arange(-crad, crad + 1)\n",
-    "    xx,yy = np.meshgrid(x, y, sparse = True)\n",
-    "    \n",
     "\n",
-    "\n",
-    "    maxxy = np.maximum(np.absolute(xx),np.absolute(yy))\n",
-    "    minxy = np.minimum(np.absolute(xx),np.absolute(yy))\n",
-    "\n",
-    "    a = (rad**2 <  (maxxy+0.5)**2 + (minxy-0.5)**2) \n",
-    "    b = (rad**2 >= (maxxy+0.5)**2 + (minxy-0.5)**2)    \n",
-    "    m1 = (a * 1 * (minxy-0.5) + b * 1 *np.sqrt((rad**2 - np.square(maxxy + 0.5)).astype(complex))).real\n",
-    "    \n",
-    "    a1 = (rad**2 >  (maxxy-0.5)**2 + (minxy+0.5)**2)\n",
-    "    b1 = (rad**2 <= (maxxy-0.5)**2 + (minxy+0.5)**2)    \n",
-    "    m2 = (a1 * 1 * (minxy+0.5) + b1 * 1 * np.sqrt((rad**2 - np.square(maxxy - 0.5)).astype(complex))).real\n",
-    "\n",
-    "    \n",
-    "    a2 = (rad**2 <  (maxxy+0.5)**2 + (minxy+0.5)**2) \n",
-    "    b2 = (rad**2 >= (maxxy-0.5)**2 + (minxy-0.5)**2)\n",
-    "#     sgrid = (rad^2*(0.5*(asin(m2/rad) - asin(m1/rad)) + ...\n",
-    "#             0.25*(sin(2*asin(m2/rad)) - sin(2*asin(m1/rad)))) - ...\n",
-    "#             (maxxy-0.5).*(m2-m1) + (m1-minxy+0.5)) ...\n",
-    "#             .*((((rad^2 < (maxxy+0.5).^2 + (minxy+0.5).^2) & ...\n",
-    "#             (rad^2 > (maxxy-0.5).^2 + (minxy-0.5).^2)) | ...\n",
-    "#             ((minxy==0)&(maxxy-0.5 < rad)&(maxxy+0.5>=rad))));\n",
-    "    f1 = (0.5*(np.arcsin(m2/rad) - np.arcsin(m1/rad)) + 0.25*(np.sin(2*np.arcsin(m2/rad)) - np.sin(2*np.arcsin(m1/rad))))\n",
-    "    first = (rad**2*f1 - (maxxy-0.5)*(m2-m1) + (m1-minxy+0.5))\n",
-    "    second = (((a2 & b2) | ((minxy==0)&(maxxy-0.5 < rad)&(maxxy+0.5>=rad))))\n",
-    "\n",
-    "    sgrid = second * 1 * first\n",
-    "    \n",
-    "    a3 = (rad**2 >  (maxxy+0.5)**2 + (minxy+0.5)**2)\n",
-    "\n",
-    "    sgrid = sgrid + a3 * 1    \n",
-    "    sgrid[crad,crad] = min(np.pi*rad**2,np.pi/2);\n",
-    "    \n",
-    "    \n",
-    "    if ((crad>0) and (rad > crad-0.5) and (rad**2 < (crad-0.5)**2+0.25)):\n",
-    "        \n",
-    "        m1  = sqrt(rad**2 - (crad - 0.5)**2)\n",
-    "        m1n = m1/rad\n",
-    "        sg0 = 2*(rad**2*(0.5*np.arcsin(m1n) + 0.25*np.sin(2*np.arcsin(m1n)))-m1*(crad-0.5))\n",
-    "        sgrid[2*crad,crad]     = sg0\n",
-    "        sgrid[crad,2*crad]     = sg0\n",
-    "        sgrid[crad,0]          = sg0\n",
-    "        sgrid[0,crad]          = sg0\n",
-    "        sgrid[2*crad-1,crad]   = sgrid(2*crad-1,crad) - sg0\n",
-    "        sgrid[crad,2*crad-1]   = sgrid(crad,2*crad-1) - sg0\n",
-    "        sgrid[crad,1]          = sgrid(crad,1)        - sg0\n",
-    "        sgrid[1,crad]          = sgrid(1,crad)        - sg0\n",
-    "    \n",
-    "    \n",
-    "    sgrid[crad,crad] = min(sgrid[crad,crad],1);\n",
-    "    \n",
-    "    h = sgrid/np.sum(sgrid);\n",
-    "    return h\n",
-    "\n",
-    "\n",
-    "    \n",
     "def imblurlens(image, r):\n",
     "    \n",
-    "    disk = fspecial_disk(r)\n",
+    "    disk = fspecial.fspecial('disk', r)\n",
     "    ims = []\n",
     "    for d in range(3):\n",
     "        im_conv_d = convolve2d(image[:,:,d], disk, mode='same', boundary='fill')\n",
@@ -166,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,9 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n"
+    }
+   ],
    "source": [
     "# #1 gaussian blur\n",
     "\n",
@@ -210,9 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\nLossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n"
+    }
+   ],
    "source": [
     "# #2 lens blur\n",
     "levels = [0.5, 1, 1.5, 2, 3, 4, 5, 6, 7, 8]\n",
@@ -227,7 +182,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
